elk/elasticsearch/k8s/elasticsearch-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: logging-elasticsearch
  namespace: kube-system
  labels:
    task: logging
    k8s-app: logging-elasticsearch
spec:
  template:
    metadata:
      labels:
        k8s-app: logging-elasticsearch
      name: logging-elasticsearch
    spec:
      serviceAccount: elasticsearch
      containers:
      - name: logging-elasticsearch
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
        image: 172.31.21.226/library/elasticsearch:6.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
        - containerPort: 9300
        resources:
          limits:
            memory: 2048Mi
          requests:
            memory: 2048Mi
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: elk-esdata
        volumeMounts:
        - name: elasticsearch-config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          subPath: elasticsearch.yml
      volumes:
      - name: elk-esdata
        persistentVolumeClaim:
          claimName: elk-esdata
      - name: elasticsearch-config
        configMap:
          name: elasticsearch-config
