elk/elasticsearch/k8s/elasticsearch-data-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: elk-esdata
  labels:
    k8s-app: elk-esdata
  namespace: kube-system
subsets:
- addresses:
  - ip: 172.31.21.208
  ports:
  - port: 1
- addresses:
  - ip: 172.31.21.209
  ports:
  - port: 1
- addresses:
  - ip: 172.31.21.210
  ports:
  - port: 1
- addresses:
  - ip: 172.31.21.211
  ports:
  - port: 1
