elk/elasticsearch/k8s/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    task: logging
    kubernetes.io/name: logging-elasticsearch
  name: logging-elasticsearch
  namespace: kube-system
spec:
  ports:
  - port: 9200
    targetPort: 9200
    name: http
  - port: 9300
    targetPort: 9300
    name: internode
  selector:
    k8s-app: logging-elasticsearch
