elk/elasticsearch/k8s/elasticsearch-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: kube-system
spec:
  rules:
  - host: es.isoftone.com
    http:
      paths:
      - path: /
        backend:
          serviceName: logging-elasticsearch
          servicePort: 9200
